2010-05-17  Sebastien Pouliot  <sebastien@ximian.com>

	* PolicyBasedHttpWebRequest.cs: Same fix as previous (typo) when 
	a flash policy is used (previous case covers a SL policy)

2010-05-18  Andreia Gaita  <avidigal@novell.com>

	* PolicyBasedHttpWebRequest.cs: headers should be sent with the main
	request

2010-05-14  Sebastien Pouliot  <sebastien@ximian.com>

	* BrowserHttpWebRequest.cs:
	* ClientHttpWebRequest.cs:
	* PolicyBasedHttpWebRequest.cs:
		Don't directly use headers internal fields

2010-05-12  Sebastien Pouliot  <sebastien@ximian.com>

	* PolicyBasedHttpWebRequest.cs: Revert r151713 since there were
	reasons to redirect using GET instead of POST - based on previous
	change it will still allow HEAD redirects

2010-04-30  Sebastien Pouliot  <sebastien@ximian.com>

	* ClientHttpWebRequest.cs: Don't check for Content-Type when
	receiving a response (it's done earlier).

2010-04-29  Sebastien Pouliot  <sebastien@ximian.com>

	* PolicyBasedHttpWebRequest.cs: Handle exceptions that occurs 
	inside the internal EndGetResponse

2010-04-29  Sebastien Pouliot  <sebastien@ximian.com> 

	* ClientHttpWebRequestInternal.cs: Set ContentType separately (i.e.
	with its own property) since cannot use the Headers property for it

2010-04-29  Sebastien Pouliot  <sebastien@ximian.com>

	* ClientHttpWebRequestInternal.cs: Set the method earlier to cover the
	case where BeginGetRequestStream is called (e.g. POST)

2010-04-28  Sebastien Pouliot  <sebastien@ximian.com>

	* ClientHttpWebRequest.cs: Ensure 'request' is creating before 
	using it

2010-04-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* BrowserHttpWebRequestInternal.cs: Update according to DownloaderRequest
	api changes.

2010-04-21  Sebastien Pouliot  <sebastien@ximian.com>

	* HttpWebResponseCore.cs: Override Headers property since it is
	now befined in HttpWebResponse in SL4

2010-04-05  Sebastien Pouliot  <sebastien@ximian.com> 

	* InternalWebResponseStreamWrapper.cs: Fix regression in DRT#244