@@ -1,3 +1,8 @@
+2010-05-20  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* BrowserHttpWebResponse.cs: Fix ContentLength when the response 
+	does not provide a Content-Length header. Fix for DRT#664
+
 2010-05-17  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* PolicyBasedHttpWebRequest.cs: Same fix as previous (typo) when 
